# korix-ai

./: .gitignore  main.py  pyproject.toml
app/agent/: graph.py  prompts.py  runner.py  state.py
app/agent/tools/: chat.py  member.py  task.py
app/core/: config.py  database.py
app/dependencies/: auth.py
app/models/: db.py
app/routers/: ai.py
app/services/: task_extractor.py
